--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     content="South Africa based Website Developer. I create Homepages, Landing pages and basic websites for businesses & professionals to showcase their services, projects and products.">
   <!-- META KEYWORDS -->
   <meta name="keywords"
-    content="responsive web design, user interface, UI, user experience, UX, homepage, landing page, website design, website development, seo, google seo, freelance, offline payments, contact links, copywriting, for hire, web hosting, domain registration,  HTML, HTML5, CSS, CSS3, JAVASCRIPT, JS, WEB DEVELOPMENT, SASS, FRONT-END DEVELOPMENT, south africa, react, vanilla javascript,  remote">
+    content="responsive web design, user interface, UI, user experience, UX, homepage, landing page, website design, website development, seo, freelance,  web hosting, domain registration, ">
   <!-- META AUTHOR -->
   <meta name="author" content="Boitumelo Shakex Sempe">
   <!-- FAVICON -->
