--- a/index.html
+++ b/index.html
@@ -484,8 +484,7 @@
         <div class="article-container">
           <article class="about-article">
             <p class="io-item" id="intro">Boitumelo 'Shakex' Sempe is a South Africa based International Relations graduate and freelance Front-End Web
-              Developer specializing in responsive
-              landing and portfolio webpages.
+              Developer specializing in User Interface and User Experience.
             </p>
             <p class="about-body io-item">
               <i class="fa-brands fa-free-code-camp"></i>
