--- a/index.html
+++ b/index.html
@@ -49,21 +49,21 @@
 
 <body>
   <!-- LOADER -->
-  <div class="loader_bg">
+  <!-- <div class="loader_bg">
     <div class="spinner">
       loading
       <div class="sector sector-1"></div>
       <div class="sector sector-2"></div>
       <div class="sector sector-3"></div>
     </div>
-  </div>
+  </div> -->
   <!-- HEADER -->
   <header id="header">
     <!-- SKIP TO MAIN LINK -->
     <a class="skip-link" href="#main">skip to main content</a>
     <div class="header">
       <nav id="navbar">
-        <div class="brand">
+        <div class="logo">
           <a href="#home" title="Shakex Sempe" class="scroll-link">
             <p>shakex<span>Sempe</span></p>
           </a>
