--- a/pages/work.html
+++ b/pages/work.html
@@ -57,9 +57,9 @@
         <a class="skip-link" href="#main">skip to main content</a>
         <div class="header">
             <nav id="navbar">
-                <div class="brand">
+                <div class="logo">
                     <a href="#home" title="Shakex Sempe" class="scroll-link">
-                        <h1>shakex<span>Sempe</span></h1>
+                        <p>shakex<span>Sempe</span></p>
                     </a>
                 </div>
                 <div class="nav-list">
@@ -297,8 +297,8 @@
         <section class="link-section" id="contact">
             <div class="contact container">
                 <div class="contact-header">
-                    <h1 title="contact information" data-text="contactinfo" class="section-title">
-                        Contact<span>Info</span></h1>
+                    <h2 title="contact information" data-text="contactinfo" class="section-title">
+                        Contact<span>Info</span></h2>
                 </div>
                 <div class="contact-items">
                     <!-- EMAIL ITEM -->
@@ -306,7 +306,7 @@
                         <div class="icon">
                             <i class="fas fa-envelope"></i>
                         </div>
-                        <h2>Email</h2>
+                        <h3>Email</h3>
                         <div class="contact-info">
                             <p>bshakex@gmail.com</p>
                             <a href="mailto:bshakex@gmail.com" title="Send Email to Shakex Sempe"><i
@@ -319,7 +319,7 @@
                         <div class="icon">
                             <i class="fas fa-phone-alt"></i>
                         </div>
-                        <h2>Phone</h2>
+                        <h3>Phone</h3>
                         <div id="phone" class="contact-info">
                             <p>+27 72 600 5104</p>
                             <a href="tel:+27726005104" title="Contact Shakex"><i class="fas fa-phone-alt"></i> ..call
@@ -331,7 +331,7 @@
                         <div class="icon">
                             <i class="fa-brands fa-whatsapp"></i>
                         </div>
-                        <h2>WhatsApp</h2>
+                        <h3>WhatsApp</h3>
                         <div id="whatsapp" class="contact-info">
                             <p>+27716876941</p>
                             <a href="tel:+27716876941" title="Contact Shakex"><i
@@ -355,62 +355,6 @@
         <!-- FOOTER -->
         <section class="link-section" id="footer">
             <div class="footer container">
-
-                <!-- SOCIAL MEDIA LINKS -->
-                <div class="socialMedia-links">
-                    <h1 data-scroll title="social media links" class="footer-section-title">my links</h1>
-                    <div class="links-grid">
-                        <!-- CODE-PEN-->
-                        <div class="socialMedia-item codepen">
-                            <p class="link-icon">codePen</p>
-                            <a href="https://codepen.io/bSempe" title="freeCodecamp" data-icon="codepen"
-                                target="_blank">
-                                <i class="fab fa-codepen"></i>@bsempe
-                            </a>
-                        </div>
-                        <!-- FREE CODE CAMP -->
-                        <div class="socialMedia-item fcc">
-                            <p class="link-icon">freeCodeCamp</p>
-                            <a href="https://www.freecodecamp.org/boitumelo-sempe" title="freeCodecamp" data-icon="FCC"
-                                target="_blank">
-                                <i class="fab fa-free-code-camp"></i>boitumelo sempe
-                            </a>
-                        </div>
-                        <!-- FRONT-END-MENTOR -->
-                        <div class="socialMedia-item fem">
-                            <p class="link-icon">front-end-mentor</p>
-                            <a href="https://www.frontendmentor.io/profile/ShakexSempe" title="font-end-mentor"
-                                data-icon="FCC" target="_blank">
-                                <i class="fas fa-anchor"></i>@ShakexSempe
-                            </a>
-                        </div>
-                        <!-- GIT-HUB -->
-                        <div class="socialMedia-item github">
-                            <p class="link-icon">github</p>
-                            <a href="https://github.com/ShakexSempe" title="github" data-icon="github" target="_blank">
-                                <i class="fab fa-github"></i>ShakexSempe
-                            </a>
-                        </div>
-                        <!-- LINKEDIN -->
-                        <div class="socialMedia-item linkedin">
-                            <!-- <i class="fas fa-link link-icon"></i> -->
-                            <p class="link-icon">linkedin</p>
-                            <a href="https://www.linkedin.com/in/boitumelo-sempe-525b2baa/" title="linkedin"
-                                data-icon="linkedin" target="_blank">
-                                <i class="fab fa-linkedin-in"></i>boitumelo Sempe
-                            </a>
-                        </div>
-                        <!-- TWTTER -->
-                        <div class="socialMedia-item twitter">
-                            <p class="link-icon">twitter</p>
-                            <a href="https://twitter.com/Shake_x11" title="twitter" data-icon="twitter" target="_blank">
-                                <i class="fab fa-twitter"></i>@shake_x11
-                            </a>
-                        </div>
-                    </div>
-
-                </div>
-                <!-- end of social media links -->
                 <!-- contact form -->
                 <form class="contact-form" target="_blank" action="https://formsubmit.co/shakexsempe@syntex.co.za"
                     method="POST">
