--- a/index.html
+++ b/index.html
@@ -168,8 +168,8 @@
       <div class="skills-header">
         <h2 title="skills" data-text="skills" class="section-title">Sk<span>i</span>lls</h2>
       </div>
-      <div class="skills-top">
-        <div class="skills-info">
+      <div class="skills-intro io-item">
+        <article class="skills-article">
           <p>
             I'm a Front-End Web Developer focused on Responsive Web Design & User Experience.<br>
             I code webpages that are: <br>
@@ -178,13 +178,13 @@
             <span>Engaging</span> via Javascript algorithms.
             <br><br>
           </p>
-        </div>
-        <div class="skills-drop">
+        </article>
+        <div class="skills-drop io-item">
           <p class="skills-drop-p">View my full  Web Development skill set in the dropdown section below.</p>
         </div>
       </div>
       <!--Dropdown-->
-      <div data-scroll class="dropdown">
+      <div class="dropdown io-item">
         <button onclick="dropdown()" title="View Full Skill-set" class="dropbtn">My Skills</button>
         <div id="myDropdown" class="dropdown-content">
 
@@ -416,7 +416,7 @@
   <!-- PADDING SECTION -->
   <div id="projects-pad" class="section-pad pad-intro">
     <figure data-scroll>
-      <a title="github contribution activity" href="#work">
+      <a title="Github contribution activity" href="#work">
         <img src="img/git-min.png" loading="lazy" alt="github contribution activity">
       </a>
     </figure>
