--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
       </div>
       <!--Dropdown-->
       <div class="dropdown io-item">
-        <button onclick="dropdown()" title="View Full Skill-set" class="dropbtn">My Skills</button>
+        <button onclick="dropdown()" title="View Full Skill-set" class="dropbtn">My Skills<i class="fa-solid fa-layer-group"></i></button>
         <div id="myDropdown" class="dropdown-content">
 
           <div class="skills-bottom">
