skills container height and projects pad

--- a/index.html
+++ b/index.html
@@ -413,14 +413,7 @@
 
   </section>
   <!--END OF SKILLS SECTION-->
-  <!-- PADDING SECTION -->
-  <div id="projects-pad" class="section-pad pad-intro">
-    <figure data-scroll>
-      <a title="Github contribution activity" href="#work">
-        <img src="img/git-min.png" loading="lazy" alt="github contribution activity">
-      </a>
-    </figure>
-  </div>
+ 
   <!-- WORK / PORTFOLIO -->
   <section id="work" class="link-section">
     <div class="work">
@@ -576,7 +569,7 @@
           <h3>Phone</h3>
           <div id="phone" class="contact-info">
             <p>+27 72 600 5104</p>
-            <a href="tel:+27726005104" title="Contact Shakex"><i class="fas fa-phone-alt"></i> ..call me</a>
+            <a href="tel:+27726005104" title="Call Shakex"><i class="fas fa-phone-alt"></i> ..call me</a>
           </div>
         </article>
         <!-- WHATSAPP NUMBER -->
@@ -587,13 +580,20 @@
           <h3>WhatsApp</h3>
           <div id="whatsapp" class="contact-info">
             <p>+27716876941</p>
-            <a href="https://wa.me/+27716876941" target="_blank" title="Contact Shakex"><i class="fa-solid fa-mobile-screen-button"></i> ..whatsapp me</a>
+            <a href="https://wa.me/+27716876941" target="_blank" title="WhatsApp Shakex"><i class="fa-solid fa-mobile-screen-button"></i> ..whatsapp me</a>
           </div>
         </article>
 
       </div>
     </div>
-    
+    <!-- PADDING SECTION -->
+  <div id="projects-pad" class="section-pad pad-intro">
+    <figure data-scroll>
+      <a title="Github contribution activity" href="#work">
+        <img src="img/git-min.png" loading="lazy" alt="github contribution activity">
+      </a>
+    </figure>
+  </div>
     <!-- end of padding section -->
   </section>
   <!--PROJECTS SECTION-->
