--- a/index.html
+++ b/index.html
@@ -49,14 +49,14 @@
 
 <body>
   <!-- LOADER -->
-  <!-- <div class="loader_bg">
+  <div class="loader_bg">
     <div class="spinner">
       loading
       <div class="sector sector-1"></div>
       <div class="sector sector-2"></div>
       <div class="sector sector-3"></div>
     </div>
-  </div> -->
+  </div>
   <!-- HEADER -->
   <header id="header">
     <!-- SKIP TO MAIN LINK -->
@@ -413,7 +413,7 @@
 
   </section>
   <!--END OF SKILLS SECTION-->
- 
+
   <!-- WORK / PORTFOLIO -->
   <section id="work" class="link-section">
     <div class="work">
@@ -666,7 +666,7 @@
       </div>
       <!-- end of social media links -->
       <!-- contact form -->
-      <form class="contact-form" target="_blank" action="https://formsubmit.co/shakexsempe@syntex.co.za" method="POST">
+      <form class="contact-form" target="_blank" action="https://formsubmit.co/https://shakexsempe.netlify.app/" method="POST">
         <h2 data-scroll class="footer-section-title contact">Get In Touch</h2>
 
         <div class="input-div">
@@ -689,7 +689,7 @@
         <!-- form options -->
         <input type="hidden" name="_subject" value="New submission!">
         <input type="hidden" name="_autoresponse" value="Shakex has received your form">
-        <input type="hidden" name="_next" value="http://syntex.co.za/thanks.html">
+        <input type="hidden" name="_next" value="https://shakexsempe.netlify.app/thanks.html">
         <input type="hidden" name="_template" value="table">
         <input type="text" name="_honey" style="display:none">
 
