--- a/index.html
+++ b/index.html
@@ -666,7 +666,7 @@
       </div>
       <!-- end of social media links -->
       <!-- contact form -->
-      <form class="contact-form" target="_blank" action="https://formsubmit.co/https://shakexsempe.netlify.app/" method="POST">
+      <form class="contact-form" target="_blank" action="https://formsubmit.co/bshakex@gmail.com" method="POST">
         <h2 data-scroll class="footer-section-title contact">Get In Touch</h2>
 
         <div class="input-div">
