--- a/index.html
+++ b/index.html
@@ -49,14 +49,14 @@
 
 <body>
   <!-- LOADER -->
-  <div class="loader_bg">
+  <!-- <div class="loader_bg">
     <div class="spinner">
       loading
       <div class="sector sector-1"></div>
       <div class="sector sector-2"></div>
       <div class="sector sector-3"></div>
     </div>
-  </div>
+  </div> -->
   <!-- HEADER -->
   <header id="header" data-header class="header">
     <!-- SKIP TO MAIN LINK -->
@@ -184,9 +184,9 @@
         </div>
       </div>
       <!--Dropdown-->
-      <div class="dropdown io-item">
+      <div class="dropdown">
         <button onclick="dropdown()" data-dropBtn title="View Full Skill-set" class="dropbtn">My Skills<i class="fa-solid fa-layer-group"></i></button>
-        <div id="myDropdown" class="dropdown-content">
+        <div id="myDropdown" class="dropdown-content show">
 
           <div class="skills-bottom">
 
