--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
       <!--Dropdown-->
       <div class="dropdown">
         <button onclick="dropdown()" data-dropBtn title="View Full Skill-set" class="dropbtn">My Skills<i class="fa-solid fa-layer-group"></i></button>
-        <div id="myDropdown" class="dropdown-content show">
+        <div id="myDropdown" class="dropdown-content">
 
           <div class="skills-bottom">
 
