--- a/index.html
+++ b/index.html
@@ -429,25 +429,25 @@
           </div>
           <figure>
             <a href="https://shakexsempe.github.io/orich-trading/" target="_blank" title="Github Repository">
-            <img src="img/orich-min.jpg" alt="Orich Trading & Projects">
+            <img src="img/orich-screen.png" alt="Orich Trading & Projects">
           </a>
           </figure>
-          <a class="view-site-btn" href="https://orich-trading-projects.netlify.app/" target="_blank">view website</a>
-          <a class="view-repo-btn" href="https://github.com/ShakexSempe/orich-trading" target="_blank">view repository</a>
+          <a class="work-btn view-site-btn" href="https://orich-trading-projects.netlify.app/" target="_blank">view website</a>
+          <a class="work-btn view-repo-btn" href="https://github.com/ShakexSempe/orich-trading" target="_blank">view repository</a>
         </div>
         <!-- HLAVUTELO -->
         <div data-scroll class="work-item">
           <div class="work-title">
-            <h3>hlavutelo <br> Trading & projects&trade;</h3>
+            <h3>hlavutelo Trading & projects&trade;</h3>
             <p><a href="https://hlavutelotrading.co.za/" target="_blank">www.hlavutelotrading.co.za</a></p>
           </div>
           <figure>
             <a href="https://hlavutelotrading.co.za/" target="_blank" title="Github Repository">
-            <img src="img/hlavutelo-logo.png" alt="Hlavutelo Trading & Projects">
+            <img src="img/hlavutelo-screen.png" alt="Hlavutelo Trading & Projects">
           </a>
           </figure>
-          <a class="view-site-btn" title="Visit Website" href="https://hlavutelotrading.co.za/" target="_blank">view website</a>
-          <a class="view-repo-btn" title="iew Repository" href="https://github.com/ShakexSempe/hlavutelo" target="_blank">view repository</a>
+          <a class="work-btn view-site-btn" title="Visit Website" href="https://hlavutelotrading.co.za/" target="_blank">view website<i class="fas fa-arrow"></i></a>
+          <a class="work-btn view-repo-btn" title="iew Repository" href="https://github.com/ShakexSempe/hlavutelo" target="_blank">view repository</a>
         </div>
         <!-- MUNCH UP -->
         <div data-scroll class="work-item">
@@ -460,8 +460,8 @@
             <img src="img/munch-logo-min.jpg" alt="Munch Up-logo">
           </a>
           </figure>
-          <a class="view-site-btn" href="https://munch-up.netlify.app/" target="_blank">view website</a>
-          <a class="view-repo-btn" href="https://github.com/ShakexSempe/munch-up" target="_blank">view repository</a>
+          <a class="work-btn view-site-btn" href="https://munch-up.netlify.app/" target="_blank">view website</a>
+          <a class="work-btn view-repo-btn" href="https://github.com/ShakexSempe/munch-up" target="_blank">view repository</a>
         </div>
         
       </div>
