--- a/index.html
+++ b/index.html
@@ -422,7 +422,7 @@
       </div>
       <div class="work-items">
         <!-- ORICH -->
-        <div data-scroll class="work-item">
+        <div  class="work-item io-item">
           <div class="work-title">
             <h3>Orich Trading & projects&trade;</h3>
             <p><a href="https://orichtrading.co.za" target="_blank">www.orichtrading.co.za</a></p>
@@ -436,7 +436,7 @@
           <a class="work-btn view-repo-btn" href="https://github.com/ShakexSempe/orich-trading" target="_blank">view repository</a>
         </div>
         <!-- HLAVUTELO -->
-        <div data-scroll class="work-item">
+        <div class="work-item io-item">
           <div class="work-title">
             <h3>hlavutelo Trading & projects&trade;</h3>
             <p><a href="https://hlavutelotrading.co.za/" target="_blank">www.hlavutelotrading.co.za</a></p>
@@ -450,14 +450,14 @@
           <a class="work-btn view-repo-btn" title="iew Repository" href="https://github.com/ShakexSempe/hlavutelo" target="_blank">view repository</a>
         </div>
         <!-- MUNCH UP -->
-        <div data-scroll class="work-item">
+        <div class="work-item io-item">
           <div class="work-title">
             <h3>Munch Up&trade;</h3>
             <p>Landing Page</p>
           </div>
           <figure>
             <a href="https://shakexsempe.github.io/munch-up/" target="_blank" title="Github Repository">
-            <img src="img/munch-logo-min.jpg" alt="Munch Up-logo">
+            <img src="img/munch-screen.png" alt="Munch Up-logo">
           </a>
           </figure>
           <a class="work-btn view-site-btn" href="https://munch-up.netlify.app/" target="_blank">view website</a>
