--- a/index.html
+++ b/index.html
@@ -452,6 +452,20 @@
         <!-- MUNCH UP -->
         <div class="work-item io-item">
           <div class="work-title">
+            <h3>Magoveni Construction&trade;</h3>
+            <p>Homepage</p>
+          </div>
+          <figure>
+            <a href="https://ngoveni-construction.netlify.app/" target="_blank" title="View Website">
+            <img src="img/magoveni-screen.png" alt="Magoveni Construction logo">
+          </a>
+          </figure>
+          <a class="work-btn view-site-btn" href="https://ngoveni-construction.netlify.app/" target="_blank">view website</a>
+          <a class="work-btn view-repo-btn" href="https://github.com/ShakexSempe/ngoveni-construction" target="_blank">view repository</a>
+        </div>
+        <!-- MUNCH UP -->
+        <div class="work-item io-item">
+          <div class="work-title">
             <h3>Munch Up&trade;</h3>
             <p>Landing Page</p>
           </div>
@@ -463,7 +477,6 @@
           <a class="work-btn view-site-btn" href="https://munch-up.netlify.app/" target="_blank">view website</a>
           <a class="work-btn view-repo-btn" href="https://github.com/ShakexSempe/munch-up" target="_blank">view repository</a>
         </div>
-        
       </div>
     </div>
   </section>
