--- a/pages/skills.html
+++ b/pages/skills.html
@@ -55,81 +55,78 @@
         <!-- SKIP TO MAIN LINK -->
         <a class="skip-link" href="#main">skip to main content</a>
         <div class="navbar">
-            <nav id="nav">
-                <div class="logo">
-                    <a href="#home" title="Shakex Sempe" class="scroll-link">
-                        <p>shakex<span>Sempe</span></p>
-                    </a>
-                </div>
-                <div class="nav-list">
-                    <div class="hamburger">
-                        <div class="bar"></div>
-                    </div>
-                    <div class="links-container">
-                        <ul class="links">
-                            <!-- SKILLS LINK -->
-                            <li>
-                                <i class="fas fa-lightbulb"></i>
-                                <a href="#skills" title="web development skills" data-after="skills"
-                                    class="scroll-link scroll-li">skills</a>
-                            </li>
-                            <!-- WORK[PROJECTS] LINK -->
-                            <li>
-                                <i class="fa-solid fa-earth-africa"></i>
-                                <a href="#work" title="github repositories" data-after="Projects"
-                                    class="scroll-link scroll-li">projects</a>
-                            </li>
-                            <!-- ABOUT LINK -->
-                            <li>
-                                <i class="fas fa-user-circle"></i>
-                                <a href="#about" title="about Boitumelo Sempe" data-after="About"
-                                    class="scroll-link scroll-li">about</a>
-                            </li>
-                            <!-- PROJECTS[PORTFOLIO] LINK -->
-                            <li>
-                                <i class="fab fa-github"></i>
-                                <a href="#projects" title="github repositories" data-after="portfolio"
-                                    class="scroll-link scroll-li">portfolio</a>
-                            </li>
-                            <!-- CONTACT LINK -->
-                            <li>
-                                <i class="fas fa-address-book"></i>
-                                <a href="#contact" title="contact-info" data-after="Contact"
-                                    class="scroll-link scroll-li">contact</a>
-                            </li>
-                            <!-- SOCIALS -->
-                            <!-- <li>
+          <nav id="nav">
+            <div class="logo">
+              <a href="#home" title="Shakex Sempe" class="scroll-link">
+                <p>shakex<span>Sempe</span></p>
+              </a>
+            </div>
+            <div class="nav-list">
+              <div class="hamburger">
+                <div class="bar"></div>
+              </div>
+              <div class="links-container" data-linksContainer>
+                <ul class="links">
+                  <!-- SKILLS LINK -->
+                  <li>
+                    <i class="fas fa-lightbulb"></i>
+                    <a href="#skills" title="web development skills" data-after="skills"
+                      class="scroll-link scroll-li">skills</a>
+                  </li>
+                  <!-- WORK[PROJECTS] LINK -->
+                  <li>
+                    <i class="fa-solid fa-earth-africa"></i>
+                    <a href="#work" title="github repositories" data-after="Projects"
+                      class="scroll-link scroll-li">projects</a>
+                  </li>
+                  <!-- ABOUT LINK -->
+                  <li>
+                    <i class="fas fa-user-circle"></i>
+                    <a href="#about" title="about Boitumelo Sempe" data-after="About"
+                      class="scroll-link scroll-li">about</a>
+                  </li>
+                  <!-- PROJECTS[PORTFOLIO] LINK -->
+                  <li>
+                    <i class="fab fa-github"></i>
+                    <a href="#projects" title="github repositories" data-after="portfolio"
+                      class="scroll-link scroll-li">portfolio</a>
+                  </li>
+                  <!-- CONTACT LINK -->
+                  <li>
+                    <i class="fas fa-address-book"></i>
+                    <a href="#contact" title="contact-info" data-after="Contact" class="scroll-link scroll-li">contact</a>
+                  </li>
+                  <!-- SOCIALS -->
+                  <!-- <li>
                     <i class="fas fa-user-friends"></i>
                     <a href="#footer" title="social-links" data-after="Socials" class="scroll-link scroll-li">socials</a>
                   </li> -->
-                            <!-- FORM -->
-                            <li>
-                                <i class="fas fa-at"></i>
-                                <a href="forms/form.html" title="contact-form" data-after="form"
-                                    class="scroll-li">form</a>
-                            </li>
-
-                        </ul>
-                        <div class="contact-links">
-                            <a title="Email Address" href="mailto:bshakex@gmail.com"><i
-                                    class="fa-solid fa-envelope"></i>bshakex@gmail.com</a>
-                            <a title="Whatsapp number" href="https://wa.me/+27716876941" target="_blank"><i
-                                    class="fa-brands fa-whatsapp"></i>0716876941 (Whatsapp)</a>
-                            <a title="Phone number" href="tel:0726005104"><i
-                                    class="fa-solid fa-phone"></i>0726005104</a>
-                            <a title="Location" href="https://goo.gl/maps/iSkbB2vbPQ3n3mhK9" target="_blank"><i
-                                    class="fa-solid fa-location-dot"></i>Mahikeng, South Africa</a>
-                        </div>
-                    </div>
+                  <!-- FORM -->
+                  <li>
+                    <i class="fas fa-at"></i>
+                    <a href="forms/form.html" title="contact-form" data-after="form" class="scroll-li">form</a>
+                  </li>
+    
+                </ul>
+                <div class="contact-links">
+                  <a title="Email Address" href="mailto:bshakex@gmail.com"><i
+                      class="fa-solid fa-envelope"></i>bshakex@gmail.com</a>
+                  <a title="Whatsapp number" href="https://wa.me/+27716876941" target="_blank"><i
+                      class="fa-brands fa-whatsapp"></i>0716876941 (Whatsapp)</a>
+                  <a title="Phone number" href="tel:0726005104"><i class="fa-solid fa-phone"></i>0726005104</a>
+                  <a title="Location" href="https://goo.gl/maps/iSkbB2vbPQ3n3mhK9" target="_blank"><i
+                      class="fa-solid fa-location-dot"></i>Mahikeng, South Africa</a>
                 </div>
-            </nav>
+              </div>
+            </div>
+          </nav>
         </div>
         <!-- PROGRESS BAR-->
         <div class="progress-container">
-            <div class="progress-bar" id="myBar"></div>
-        </div>
+          <div class="progress-bar" id="myBar"></div>
+        </div> 
         <!-- END OF PROGRESS BAR-->
-    </header>
+      </header>
     <!-- END OF HERO-->
 
     <!--HERO-->
