--- a/index.html
+++ b/index.html
@@ -428,9 +428,9 @@
             <p><a href="https://orichtrading.co.za" target="_blank">www.orichtrading.co.za</a></p>
           </div>
           <figure>
-            <a href="https://shakexsempe.github.io/orich-trading/" target="_blank" title="Github Repository">
+            <!-- <a href="https://shakexsempe.github.io/orich-trading/" target="_blank" title="Github Repository">
+            </a> -->
             <img src="img/orich-screen.png" alt="Orich Trading & Projects">
-          </a>
           </figure>
           <a class="work-btn view-site-btn" href="https://orich-trading-projects.netlify.app/" target="_blank">view website</a>
           <a class="work-btn view-repo-btn" href="https://github.com/ShakexSempe/orich-trading" target="_blank">view repository</a>
@@ -442,9 +442,9 @@
             <p><a href="https://hlavutelotrading.co.za/" target="_blank">www.hlavutelotrading.co.za</a></p>
           </div>
           <figure>
-            <a href="https://hlavutelotrading.co.za/" target="_blank" title="Github Repository">
             <img src="img/hlavutelo-screen.png" alt="Hlavutelo Trading & Projects">
-          </a>
+            <!-- <a href="https://hlavutelotrading.co.za/" target="_blank" title="Github Repository">
+          </a> -->
           </figure>
           <a class="work-btn view-site-btn" title="Visit Website" href="https://hlavutelotrading.co.za/" target="_blank">view website<i class="fas fa-arrow"></i></a>
           <a class="work-btn view-repo-btn" title="iew Repository" href="https://github.com/ShakexSempe/hlavutelo" target="_blank">view repository</a>
@@ -456,15 +456,15 @@
             <p>Homepage</p>
           </div>
           <figure>
-            <a href="https://ngoveni-construction.netlify.app/" target="_blank" title="View Website">
             <img src="img/magoveni-screen.png" alt="Magoveni Construction logo">
-          </a>
+            <!-- <a href="https://ngoveni-construction.netlify.app/" target="_blank" title="View Website">
+          </a> -->
           </figure>
           <a class="work-btn view-site-btn" href="https://ngoveni-construction.netlify.app/" target="_blank">view website</a>
           <a class="work-btn view-repo-btn" href="https://github.com/ShakexSempe/ngoveni-construction" target="_blank">view repository</a>
         </div>
         <!-- MUNCH UP -->
-        <div class="work-item io-item">
+        <!-- <div class="work-item io-item">
           <div class="work-title">
             <h3>Munch Up&trade;</h3>
             <p>Landing Page</p>
@@ -476,7 +476,7 @@
           </figure>
           <a class="work-btn view-site-btn" href="https://munch-up.netlify.app/" target="_blank">view website</a>
           <a class="work-btn view-repo-btn" href="https://github.com/ShakexSempe/munch-up" target="_blank">view repository</a>
-        </div>
+        </div> -->
       </div>
     </div>
   </section>
