--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <!-- META THEME COLOR -->
   <!-- <meta name="theme-color" content="#20262e" /> -->
-  <meta name="theme-color" content="#000" />
+  <meta name="theme-color" content="#15191e" />
   <!-- META OG IMAGE -->
   <meta name="image" property="og:image" content="https://shakexsempe.netlify.app/img/shakex-sempe-logo.png">
 
@@ -208,7 +208,7 @@
               <div class="icon">
                 <i class="fab fa-css3-alt"></i>
               </div>
-              <h3>CSS</h3>
+              <h3>CSS 3</h3>
               <ul>
                 <li>Animations & Transitions</li>
                 <li>Flexbox & Grid Layout</li>
