skills btn and footer-nav i

--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
       </div>
       <!--Dropdown-->
       <div class="dropdown">
-        <button onclick="dropdown()" data-dropBtn title="View Full Skill-set" class="dropbtn">My Skills<i class="fa-solid fa-layer-group"></i></button>
+        <button onclick="dropdown()" data-dropBtn title="View Full Skill-set" class="dropbtn">My Skills<i class="fa-regular fa-code"></i></button>
         <div id="myDropdown" class="dropdown-content">
 
           <div class="skills-bottom">
@@ -735,7 +735,7 @@
     <a href="#home"><i class="fas fa-house"></i>home</a>
   </figure>
   <figure class="link-item item-3">
-    <a href="pages/work.html" target="_blank"><i class="fa-regular fa-code"></i>work</a>
+    <a href="pages/work.html" target="_blank"><i class="fa-solid fa-layer-group"></i>work</a>
   </figure>
 </div>
 <!-- PRELOADER SCRIPT -->
