scroll-snap work gallery

--- a/index.html
+++ b/index.html
@@ -428,10 +428,12 @@
             <h3>Orich Trading & projects&trade;</h3>
             <p><a href="https://orichtrading.co.za" target="_blank">www.orichtrading.co.za</a></p>
           </div>
-          <figure>
+          <figure class="scroll-snap">
             <!-- <a href="https://shakexsempe.github.io/orich-trading/" target="_blank" title="Github Repository">
             </a> -->
             <img src="img/orich-screen.png" alt="Orich Trading & Projects">
+            <img src="img/orich-screen-2.png" alt="Orich Trading & Projects">
+            <img src="img/orich-screen-3.png" alt="Orich Trading & Projects">
           </figure>
           <a class="work-btn view-site-btn" href="https://orich-trading-projects.netlify.app/" target="_blank">view website</a>
           <a class="work-btn view-repo-btn" href="https://github.com/ShakexSempe/orich-trading" target="_blank">view repository</a>
